--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <h1>Codecademy is the best way to learn code</h1>
-    <button onclick="importData()">Import Data</button>
-    <script src="/js/index.js"></script>
+    <div class="form">
+      <input type="" name="" value="" />
+      <button onclick="importData()">Upload</button>
+      <script src="/js/index.js"></script>
+    </div>
   </body>
 </html>
