--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Codecademy is the best way to learn cod</h1>
+    <h1>Codecademy is the best way to learn code</h1>
     <div class="form">
       <input type="" name="" value="" />
       <button onclick="importData()">Upload</button>
